--- a/dkr/dockerfile_dep
+++ b/dkr/dockerfile_dep
@@ -2,10 +2,21 @@ FROM postgres
 # FROM ubuntu:latest
 RUN  apt-get -qq update
 
+
 ARG DEBIAN_FRONTEND=noninteractive
+ARG cnt_user=none
+ENV cnt_user=$cnt_user
 
 ADD scripts/dep_install /dep_install
-RUN /dep_install
+RUN /dep_install $cnt_user
+# RUN  usermod -aG sudo $cnt_user
+# RUN  chown -R $cnt_user:$cnt_user  /var/lib/postgresql
 
+USER ${cnt_user}
+WORKDIR $cnt_user
+ENV PGDATA=/var/lib/postgresql/data
+
+#shorthand for utilities
+ENV PATH=/$cnt_user/pgvector_test/dkr/scripts:$PATH
 
 ENTRYPOINT ["sleep", "36000"]
